<resources>
    <string name="app_name">User Profile App</string>
    <string name="name">%1$s %2$s</string>

    <string name="SpashScreenText">User Profile Kotlin</string>
    <string name="imgDescript">White profile image</string>

    //activity create profile
    <string name="btnOpenPicGallary">OPEN PICTURE GALLERY</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="description">Description</string>

    <string name="confirm">Confirm</string>
    <string name="fullname">Full Name</string>
    <string name="profDescription">Profile Description</string>
    <string name="imgDescriptProf">Your Profile Picture</string>

    //activity profile

</resources>
